# dedalus

./: .gitignore  .hgignore  .mailmap  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  __init__.py  dedalus.cfg  dev.py  plot_tools.py  public.py  pyproject.toml  requirements.txt  setup.py
atmospheres/: atmospheres.py
core/: distributor.py  future.py  pencil.py  polynomials.pyx  problems.py  solvers.py  system.py  timesteppers.py  transposes.pyx
d3_scratch/: chunk_cart.py  chunk_s2.py  sphere_jets.py  sphere_rossby_waves.py  test_BVP.py  test_BVP_shell.py  test_arithmetic.py  test_ball_2.py  test_coords.py  test_coords_2.py  test_fourier_integrate_trigpoly.py  test_jacobi_basics.py  test_jacobi_integrate_poly.py  test_new_marti_conv.py  test_new_marti_conv_potential.py  test_new_marti_dynamo.py  test_new_marti_hydro_ball_shell.py  test_scalar_advection_ball.py  test_timings.py  test_timings2.py
dedalus/: __init__.py  __main__.py  dedalus.cfg  dev.py  public.py
dedalus2/: dev.py  public.py
doc/: keaton_chebyshev_matrices.tex
docs/: .readthedocs.yaml  Makefile  activate  activate.csh  conf.py  dedalus2.rst  dedalus_install_final.rst  dedalus_install_preliminaries.rst  getting_started.rst  index.rst  install.sh  installation.rst  keaton_chebyshev_matrices.tex  keaton_structure.md  push_to_astro  push_to_lcd  requirements.rtd.txt  stampede.rst  stampede_mkl.rst  trestles.rst  using_sphinx.rst
extras/: flow_tools.py  plot_tools.py
keaton/: __init__.py  domain.py  fields.py  integrator.py  pencils.py  primary.py  problems.py  public.py  (+2 more)
(+539 files in other folders)
